bin/testsuite/tests/compiler/src/errors/compiler2160.swg
#global testerror "Err0453"

namespace s
{
    namespace b;
}
